--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,3 +50,6 @@ unbind M-l
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
 bind-key -n M-Enter choose-session
+
+bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
+bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
