--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ bind r source-file ~/.tmux.conf
 
 # Enable italics
 set -g default-terminal 'tmux-256color'
-set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 # Enable mouse scrolling and window resizing
 set -g mouse on
