--- a/.tmux.conf
+++ b/.tmux.conf
@@ -49,7 +49,8 @@ unbind M-l
 
 bind-key -n M-h previous-window
 bind-key -n M-l next-window
-bind-key -n M-Enter choose-session
+# Alphabetically sort sessions
+bind-key -n M-Enter choose-session -sZ -O name
 
 bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
 bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
