--- a/.tmux.conf
+++ b/.tmux.conf
@@ -54,3 +54,6 @@ bind-key -n M-Enter choose-session -sZ -O name
 
 bind-key -n C-S-Left swap-window -t -1\; select-window -t -1
 bind-key -n C-S-Right swap-window -t +1\; select-window -t +1
+
+# Easier searching
+bind-key / copy-mode \; send-key ?
