--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,9 @@ set-option -sa terminal-overrides ',xterm-256color:RGB'
 # Enable mouse scrolling and window resizing
 set -g mouse on
 
+# Loads of scrollback
+set-option -g history-limit 50000
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -26,7 +29,7 @@ set -g @resurrect-capture-pane-contents 'on'
 
 # Set up tmux-yank
 set -g @yank_selection_mouse 'clipboard'
-set -g @yank_action 'copy-pipe-and-cancel'
+set -g @yank_action 'copy-pipe'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run -b '~/.tmux/plugins/tpm/tpm'
